<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="@string/send_test_intent_pref"
        android:title="@string/send_test_intent_title"
        android:summary="@string/send_test_intent_summary">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="Test Data" >
        </intent>
    </Preference>
    <Preference
        android:key="rateThisApp"
        android:title="@string/rate_this_app_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://play.google.com/store/apps/details?id=uk.co.ashtonbrsc.android.intentintercept" >
        </intent>
    </Preference>
    <Preference
        android:key="viewMyOtherApps"
        android:title="@string/view_my_other_apps_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://play.google.com/store/apps/developer?id=Intrications" >
        </intent>
    </Preference>
    <Preference
        android:key="visitWebsite"
        android:title="@string/visit_website_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://www.intrications.com" >
        </intent>
    </Preference>
    <Preference
        android:key="visitGooglePlus"
        android:title="@string/visit_google_plus_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://plus.google.com/114248840147347624819/posts" >
        </intent>
    </Preference>
    <Preference
        android:key="viewSourceCode"
        android:summary="@string/view_source_code_summary"
        android:title="@string/view_source_code_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/intrications/intent-intercept" >
        </intent>
    </Preference>
    <Preference
        android:key="licence"
        android:summary="@string/license_summary"
        android:title="@string/license_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="http://www.apache.org/licenses/LICENSE-2.0.html" >
        </intent>
    </Preference>

</PreferenceScreen>